# drug_named_entity_recognition

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.rst  cross_check_against_common_english_vocab.py  drug_named_entity_recognition_example_walkthrough.ipynb  find_short_drug_names.py  omop_api.py  omop_cache.pkl  pyproject.toml  setup.cfg  setup.py  smiles_example_python.py  structure_mol_example_python.py  tox.ini  update.ipynb
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature-request.md
.github/workflows/: main_drugnerfunctionapp.yml  release.yml
drug_named_entity_recognition/: __init__.py  drugs_dictionary_medlineplus.csv  drugs_dictionary_mesh.csv  drugs_dictionary_nhs.csv  drugs_finder.py  test_drugs_finder.py
drugfinder/: drugs_dictionary_wikipedia.csv  drugs_finder.py  extract_drug_names_and_synonyms_from_mesh_dump.py  extract_drug_names_and_synonyms_from_wikipedia_dump.py  test_drugs_finder.py
harvesting_data_from_source/: 01_drugbank_download_vocabulary.py  02_combine_data_sources.py  02_mesh_download_mesh_dump_and_extract_drug_names_and_synonyms.py  03_nhs_get_drug_data_from_api.py  05_combine_data_sources.py  05_download_smiles_from_pubchem.py  06_make_dict_lc_mesh_name_to_smiles_and_mass.py  07_combine_data_sources.py  07_optional_augment_inclusions_list.py  08_optional_check_words_with_ai.py  all_nhs_drugs.json  drugs_dictionary_medlineplus.csv  inclusions.py  mesh_01_download_mesh_dump_and_extract_drug_names_and_synonyms.py  nhs_01_download_drug_pages.py  nhs_01_get_drug_data_from_api.py  nhs_02_download_insulin.py  old_nhs_01_download_drug_pages.py  old_nhs_03_get_drug_names_and_synonyms.py  optional_03_check_words_with_ai.py
src/: test_omop_output.py
src/drug_named_entity_recognition/: __init__.py  download_drugbank_vocabulary.py  download_mesh_dump_and_extract_drug_names_and_synonyms.py  drug_ner_dictionary.pkl.bz2  drugbank vocabulary.csv  drugs_dictionary_mesh.csv  drugs_dictionary_nhs.csv  drugs_dictionary_wikipedia.csv  drugs_finder.py  extract_drug_names_and_synonyms_from_wikipedia_dump.py  molecular_properties.py  omop_api.py  structure_file_downloader.py  util.py  wget-log
tests/: __init__.py  test_custom_modifications.py  test_drugs_finder.py  test_formula.py  test_mass.py  test_molecular_weight_calculation.py  test_omop_output.py  test_pubchem_enrichment.py  test_smiles.py
