[project]
name = "drug-named-entity-recognition"
version = "2.0.8"
description = "Drug Named Entity Recognition library to find and resolve drug names in a string (drug named entity linking)"
readme = "README.md"
keywords = ['drug', 'bio', 'biomedical', 'medical', 'pharma', 'pharmaceutical', 'ner', 'nlp', 'named entity recognition', 'natural language processing', 'named entity linking']
license = { file = "LICENSE" }
maintainers = [
  { name = "Thomas Wood", email = "thomas@fastdatascience.com" },
]
authors = [
    { name = "Thomas Wood", email = "thomas@fastdatascience.com" },
]
requires-python = ">=3.6,<=3.13"
classifiers=[
    # see https://pypi.org/classifiers/
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# this set should be kept minimal!
dependencies = [
    "requests"
]

[project.optional-dependencies]

# dev - the developer dependency set, for contributors to Drug Named Entity Recogniser
dev = ["check-manifest", "pytest", "nltk", "pandas"]

[project.urls]
"Documentation" = "https://fastdatascience.com/drug-named-entity-recognition-python-library/"
"Bug Reports" = "https://github.com/fastdatascience/drug_named_entity_recognition/issues"
"Source Code" = "https://github.com/fastdatascience/drug_named_entity_recognition"

[build-system]
requires = ["setuptools>=46.4.0", "wheel", "twine"]
build-backend = "setuptools.build_meta"
